[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mumenrepo"
description = "mumencoder shared code repo"
version = "1.0.0a"
authors = [ "mumencoder" ]
repository = "https://github.com/mumencoder/mumenrepo"
license = "MIT"
packages = [{include = "mumenrepo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "*"
requests = "*"
dominate = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2"